syntax = "proto3";

package paladin.domain;
option go_package = "pkg/protobufs";

service PaladinContractPluginService {
  // Fetches states in a given meta state
  rpc GetStates (GetStatesRequest) returns (GetStatesReply) {}

  // Opening a bidirectional stream to receive commands and send events
  rpc Register (stream ContractPluginEvent) returns (stream ContractPluginEvent) {}
}

// Metastate is spent, unspent, pending or spending
message GetStatesRequest {
  string MetaState = 1;
}

message GetStatesReply {
  repeated string stateId = 1;
}

message ContractPluginEvent {
  string contractPluginId = 1;
  string id = 2;
  string correlationId = 3;
  string type = 4;
  repeated string arguments = 5;
}
