syntax = "proto3";

package paladin.pkg.protobuf;
option go_package = "./protobuf";
message LoadDomainInput {
    string domain_id = 1;
    repeated string field_names = 2;
    bool include_metadata = 3;
}

message LoadDomainResponse {
    string domain_id = 1;
    repeated string field_names = 2;
    bool include_metadata = 3;
}